#1323 consolidate new UI and test the simpler app-backend
